// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> should render 1`] = `
.c0 {
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin: 1.25rem;
  padding: 1rem;
  width: calc(100% / 3 - 2 * 1.25rem);
  list-style-type: none;
  background-color: white;
}

@media (max-width:980px) {
  .c0 {
    width: calc(100% / 2 - 2 * 1.25rem);
  }
}

@media (max-width:600px) {
  .c0 {
    width: calc(100% - 1 * 1.25rem);
  }
}

<div>
  <li
    class="c0"
  />
</div>
`;

exports[`<Card /> should render children 1`] = `
.c0 {
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin: 1.25rem;
  padding: 1rem;
  width: calc(100% / 3 - 2 * 1.25rem);
  list-style-type: none;
  background-color: white;
}

@media (max-width:980px) {
  .c0 {
    width: calc(100% / 2 - 2 * 1.25rem);
  }
}

@media (max-width:600px) {
  .c0 {
    width: calc(100% - 1 * 1.25rem);
  }
}

<div>
  <li
    class="c0"
  >
    <strong>
      titre
    </strong>
    <p>
      content
    </p>
  </li>
</div>
`;
